# System_Design_POC_Implementation

./: .gitignore  Advanced_QA  README.md
AICallCenter/: README.md  design.md
AIMemory/: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  demo.py  design_doc.md  docker-compose.yml  main.py  pyproject.toml
AIMemory/.github/workflows/: test.yml
AIMemory/api/: routes.py
AIMemory/core/: auth.py  celery_app.py  config.py  memory_manager.py  models.py  security.py  storage.py
AIMemory/secrets/: aimemory_api_key.txt
AIMemory/tests/: test_memory.py
AITrust/: Dockerfile  README.md  design_doc.md  docker-compose.yml  pyproject.toml
AITrust/api/: __main__.py  main.py
AITrust/core/: audit.py  cache.py  celery_app.py  config.py  models.py  policy.py  scanner.py  storage.py
AITrust/secrets/: aitrust_api_key.example  postgres_password.example
AITrust/tests/: test_api.py
CPG/: README.md  demo.py  design.md
ExpiredCoupons/: README.md  design.md  poc.py
HalalWeee/: README.md  design.md  requirements.txt
JobScheduler/: design.md  scheduler_poc.py
LLMChatRoom/: README.md  api.py  demo_state.json  design.md  poc.py  storage.py
LastMile/: README.md  design.md  poc.py
Newsfeed/: README.md  design.md  newsfeed_service.py
OpenBlock/: README.md  design.md  pyproject.toml
OpenBlock/examples/: agent_plan.yaml  hello_plan.yaml
OpenBlock/openblock/: __init__.py  cli.py  config.py  pipeline.py
OpenBlock/openblock/agents/: base.py  coder.py  executor.py  planner.py  reviewer.py
OpenBlock/tests/: test_config.py  test_pipeline.py
OrbManager/: README.md  design.md
Scribe/: deep_dive_playbook.md  design.md  flows.md  talk_track.md
(+159 files in other folders)
