[tool.poetry]
name = "aimemory"
version = "0.1.0"
description = "A memory layer for LLMs"
authors = ["Antigravity <antigravity@google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.1"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
